[PCFG-83] rebase
